fixed alignment

--- a/src/components/mobo/style.css
+++ b/src/components/mobo/style.css
@@ -295,3 +295,6 @@ p.para2{
     border-bottom:  2px solid var(--google-green);
     border-right: 2px solid var(--google-yellow);
 }
+.member:first-child {
+    padding-bottom: 5px;
+}
